# QuDPy-clean

./: .gitignore  MANIFEST.json  README.md  conftest.py  pyproject.toml  sitecustomize.py
docs/: deprecated_boundaries_zh.md  document_summary.md
docs/detailed API/: api_docs_gap_report_zh.md  field_zh.md  io_metadata_zh.md  normalizer.md  normalizer_zh.md  parameters_zh.md  pulse_sequence_phase_cycling_architecture_zh.md  solver_result_zh.md  spectroscopy_zh.md  workflow_examples_zh.md
examples/: example1.py  example2.py
qudpy/: Classes.py  __init__.py  plot_functions.py
qudpy_sjh/: __init__.py  _windows_dll.py
qudpy_sjh/bak/: dynamics_analysis_bak.py  observables_bak.py
qudpy_sjh/docs/: document_update_summary.md  document_updated.md
qudpy_sjh/docs/detailed API/: solver_result_zh.md  spectroscopy_zh.md
qudpy_sjh/examples/ta/: ta_three_level_intrinsic_response_v2.py
qudpy_sjh/experiments/: __init__.py
qudpy_sjh/experiments/pulse_sequence/: __init__.py  phase_cycling.py  pulse_sequence.py  (+1 more)
qudpy_sjh/scratch/: window_effect_absorption_compare.py
qudpy_sjh/systems/: __init__.py  adapters.py  core.py  exciton_ladders.py  nlevel.py
qudpy_sjh/utils/: __init__.py  checks.py  constants.py  io.py  plotting.py
sjh_learn/: __init__.py  readme.md
sjh_learn/bak/: dynamics_analysis_bak.py  observables_bak.py
sjh_learn/docs/: document_updated.md
sjh_learn/examples/: __init__.py
sjh_learn/experiments/: __init__.py
sjh_learn/scratch/: window_effect_absorption_compare.py
sjh_learn/utils/: __init__.py  checks.py  constants.py  io.py  plotting.py
(+79 files in other folders)
